@@ -39,7 +39,8 @@ fixed bugs:
 - fixed bug in reader_cip regarding reading of very long constraints
 - fixed bug in cons_knapsack: in seldom circumstances the relaxation of a linear constraint can detect infeasibility, which was not handled properly
 - fixed bug in cons_quadratic: in seldom cases, fixed variables may have been substituted out wrongly in presolve
- fixed bug in cons_countsols.c w.r.t. to collecting feasible solutions
+- fixed bug in cons_countsols.c w.r.t. to collecting feasible solutions
+- fixed bug in cons_linear.c: multiaggregated variables were not removed when adding during solve, leading to a failing assert in tightenBounds due to an unsuccessful bound tightening
 
 performance improvements:
 - shiftandpropagate-heuristic uses optimized data structures and produces no memory overhead anymore
